Y'a plus qu'à faire le chapitre 4 !

--- a/master.tex
+++ b/master.tex
@@ -303,7 +303,7 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	\input{tex/chap_multipactor.tex}
 	
 	% Education
-	%\input{tex/chap4.tex}
+	\input{tex/chap4.tex}
 	
 	%----------------------------APPENDIX------------------------------------------------------------
 	\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
