--- a/tex/chap_high_power_icrf.tex
+++ b/tex/chap_high_power_icrf.tex
@@ -37,14 +37,15 @@ In order to excite the Fast-Waves in the Ion Cyclotron range of frequencies ($f=
 
 % #####################################################
 \subsection{Faraday Screen}
-\begin{marginfigure}
-	\centering
-	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/ICRH_Faraday_Screen_Principle}
-	\caption{Surface current induced on a shield above a perfectly conducting plane by the enclosed line current $I$. Surface current shown is superposition of currents on inner and outer blade faces. From \cite{faulconer1983}}
+Unfortunately, it was identified early that coupling structures do not excite only Fast-Waves but also Slow-Waves \sidecite[-1cm]{evrard1982-1}. Slow-Waves are produced by RF currents parallel to the magnetic field as well by oscillating space charges on the antenna structure. For this reason, early ICRH experiments introduced the use of electrostatic shield, or \textit{Faraday Screen} \sidecite[-2cm]{england1989}. 
+
+\begin{marginfigure}[-0.5cm]
+	\includegraphics[width=0.5\linewidth]{figures/chap3/WEST_ICRH/ICRH_Faraday_Screen_Principle}
+	\caption{Surface current induced on a shield above a perfectly conducting plane by the enclosed line current $I$. Surface currents shown is superposition of currents on inner and outer blade faces.}
 	\label{fig:icrhfaradayscreenprinciple}
 \end{marginfigure}
 
-Unfortunately, it was identified early that coupling structures do not excite only Fast-Waves but also Slow-Waves \sidecite{evrard1982-1}. Slow-Waves are produced by RF currents parallel to the magnetic field as well by oscillating space charges on the antenna structure. For this reason, early ICRH experiments introduced the use of electrostatic shield, or \textit{Faraday Screen} \sidecite{england1989}. A Faraday Screen is formed by an array of metallic strips (or bars), aligned with the total magnetic field \sidecite{bures1990}. By screening the electric field components parallel to the strips/bars (Figure~\ref{fig:icrhfaradayscreenprinciple}), it aims acting as a polarizer, to filter out specifically the undesirable Slow-Wave. A denser screen better isolates the central conductor of the antenna from the plasma, but it also causes significant magnetic shielding and enhanced Ohmic losses in the screen \sidecite{faulconer1983}, leading to actively cooled structures. Various experiments have shown the benefits of faraday Screen \sidecite{noterdaeme1986, bures1990, myra1990}, but some also concluded that heating performance of unshielded antenna was found to be similar to that of a shielded antenna \sidecite{nieuwenhove1991, nieuwenhove1992}.  Although it might be necessary to keep a Faraday shield for other reasons, such as decoupling of thermal and mechanical stresses on plasma facing components, the question of the necessity of a Faraday Screen in future ICRH antennas is still an open question in the ICRH community \sidecite{noterdaeme2019}. 
+A Faraday Screen is formed by an array of metallic strips (or bars), aligned with the total magnetic field \sidecite[-2.5cm]{bures1990}. By screening the electric field components parallel to the strips/bars (Figure~\ref{fig:icrhfaradayscreenprinciple}), it aims acting as a polarizer, to filter out specifically the undesirable Slow-Wave. A denser screen better isolates the central conductor of the antenna from the plasma, but it also causes significant magnetic shielding and enhanced Ohmic losses in the screen \sidecite[-4cm]{faulconer1983}, leading to actively cooled structures. Various experiments have shown the benefits of faraday Screen \sidecite[+4cm]{noterdaeme1986, bures1990, myra1990}, but some also concluded that heating performance of unshielded antenna was found to be similar to that of a shielded antenna \sidecite[+4.2cm]{nieuwenhove1991, nieuwenhove1992}.  Although it might be necessary to keep a Faraday shield for other reasons, such as decoupling of thermal and mechanical stresses on plasma facing components, the question of the necessity of a Faraday Screen in future ICRH antennas is still an open question in the ICRH community \sidecite[+3.5cm]{noterdaeme2019}. 
 
 
 
@@ -65,7 +66,7 @@ Moreover, sudden changes in antenna loading arise in tokamaks operating in H-mod
 
 
 \subsection{RF Sheaths}\label{sec:RF_sheaths}
-Early ICRH experiments have reported non-linear interactions between high power RF waves and edge plasma, leading to the production of influx of impurities which prevented efficient heating of the plasma \sidecite{rothman1966}. Since then, despite improvements in antenna design and plasma operation which substantially reduced these undesirable phenomenon \sidecite{noterdaeme1993}, it still remains an important operational limitation of ICRH \sidecite{noterdaeme2019-1}. One mechanism leading to the release impurities during ICRH operation is RF sheaths rectification. 
+Early ICRH experiments have reported non-linear interactions between high power RF waves and edge plasma, leading to the production of influx of impurities which prevented efficient heating of the plasma \sidecite{rothman1966}. Since then, despite improvements in antenna design and plasma operation which substantially reduced these undesirable phenomenon \sidecite{noterdaeme1993}, it still remains an important operational limitation of ICRH \sidecite[+1cm]{noterdaeme2019-1}. One mechanism leading to the release impurities during ICRH operation is RF sheaths rectification. 
 
 Because of their mass difference, there is a discrepancy between ions and electrons motions along magnetic field lines. Electrons accumulate faster than ions on Plasma Facing Components (PFC) and form a thin negatively biased layer that repulses electrons and attracts ions. This attraction increases the ion parallel energy into the wall and thus enhance the heavy ion bombardment of the PFC. Ion impacting the PFC can cause sputtering of impurities that can reach and contaminate the plasma. In the presence RF waves parallel to the magnetic field lines (which corresponds to the Slow-Wave polarization) driven by ICRH antenna, sheaths are enhanced. Instead of being constant in time, DC potential drop across the sheath is then the superposition of a DC component and a RF oscillations, called \textit{RF-induced sheath rectification}. This  mechanism has been identified as a major reason for the increased interaction with the wall as is still an intense research topic \sidecite{bobkov2019}.
 
@@ -104,7 +105,7 @@ The 2020 panorama of worldwide ICRH system operational domains is illustrated in
 	\label{fig:westicrhcomparaisonothermachines}
 \end{figure}
 
-All the aspects previously listed led to iterate between RF and mechanical design, with generally opposite constraints and necessary compromises\sidenote{In order to improve the mechanical assembly of the WEST antenna in comparison to the 2007 prototype, the main dimensions changes have been proposed by K.Vulliez, A.Argouarch and P.Mollard for the conceptual design review in 2013 and assessed after from the RF point of view in an internal note\sidecite{hillairet2014-1}}. While the ICRH system upgrade for the WEST project also concerned the generator update and the moving of an antenna from port Q5 to port Q4A, this section only focuses on the antenna design. 
+All the aspects previously listed led to iterate between RF and mechanical design, with generally opposite constraints and necessary compromises\sidenote{In order to improve the mechanical assembly of the WEST antenna in comparison to the 2007 prototype, the main dimensions changes have been proposed by K.Vulliez, A.Argouarch and P.Mollard for the conceptual design review in 2013 and assessed after from the RF point of view in an internal note\sidecite[+1cm]{hillairet2014-1}}. While the ICRH system upgrade for the WEST project also concerned the generator update and the moving of an antenna from port Q5 to port Q4A, this section only focuses on the antenna design. 
 
 
 \begin{figure}
@@ -117,6 +118,13 @@ All the aspects previously listed led to iterate between RF and mechanical desig
 
 % ###################################################
 \subsubsection{Front Parts}
+\begin{marginfigure}[-1cm]
+	\centering
+	\includegraphics[width=0.8\linewidth]{figures/chap3/WEST_ICRH/WEST_front_face_evolution1}
+	\caption{Evolution of 2D CAD models for coupling optimization.}
+	\label{fig:westfrontfaceevolution1}
+\end{marginfigure}
+
 With respect to the 2007 prototype, the front face of the WEST ICRH antennas have undergone few major changes in order to meet the following objectives:
 \begin{enumerate}
 	\item Increase the antenna overall coupling resistance $R_c$ (Eq.(\ref{eq:coupling_resistance}))
@@ -125,27 +133,22 @@ With respect to the 2007 prototype, the front face of the WEST ICRH antennas hav
 	\item Minimize sheaths potential
 \end{enumerate}
 
-Increasing the coupling resistance allows coupling more power for a given set of voltages and currents. In other words, it also allows lowering capacitor voltages (and electric field) and currents for a given coupled power, which has operational and safety benefits\sidenote{In addition, the capacitor manufacturer COMET has lowered the maximum voltage and current specifications on its products between 2004 and 2013. Meeting lower voltage and current specifications.}. 
+Increasing the coupling resistance allows coupling more power for a given set of voltages and currents. In other words, it also allows lowering capacitor voltages (and electric field) and currents for a given coupled power, which has operational and safety benefits\footnote{In addition, the capacitor manufacturer COMET has lowered the maximum voltage and current specifications on its products between 2004 and 2013. Meeting lower voltage and current specifications.}. 
 
-The frequency increase is a practical consequence of the changes of Tore Supra to become WEST\sidecite{bourdelle2015}: as the plasma volume was reduced and  shifted toward the high field side of the machine, locating the cyclotron resonance in the plasma centre requires higher RF frequencies (cf. Eq.(\ref{eq:cyclotron_resonance})). The desired frequency band of the ICRH system for WEST was thus asked to 48-60~MHz \todo{WEST ICRH guide}
-
-\begin{marginfigure}
-	\centering
-	\includegraphics[width=0.8\linewidth]{figures/chap3/WEST_ICRH/WEST_front_face_evolution1}
-	\caption{Evolution of 2D CAD models for coupling optimization.}
-	\label{fig:westfrontfaceevolution1}
-\end{marginfigure}
-
-From July 2013 to May 2014, the coupling of various models have been assessed using the COMSOL finite element software. Perfectly Match Layers (PMLs) boundary conditions adapted to plasma fast wave were used in 2D and 3D\sidecite{jacquot2013, colas2019}. Starting from the 2007 prototype geometry, the effects of geometrical modifications on coupling resistance have been assessed, from very simplified parametrized 2D (Figure~\ref{fig:westfrontfaceevolution1}) to almost final 3D geometries (Figure~\ref{fig:westfrontfaceevolution2}). These models used first experimental density profiles obtained in Tore Supra in 2007 (pulse \#40574) before using assumptions of WEST density profiles. In this pulse, an L-mode plasma has been moved horizontally over 5 cm in front of the load-resilient antenna prototype to assess its coupling properties at 48 MHz. The calculations have been performed for 8 profiles in order to make relative comparisons of the coupling resistance. 2D model run in few minutes while 3D models typically required ten to twenty hours depending on their complexity and the distance to the cut-off density on a desktop computer. 
-
-These parametrized models allowed us to assess the relevant geometrical parameters (strap thickness, width, and distances to the plasma cut-off and antenna box) affecting the coupling resistance. In order to optimize the coupling resistance in dipole configuration, the thickness of the strap has been kept as low as possible (between 13 and 15 mm) while ensuring sufficient stiffness, since they are water cooled through 70$\si{\degreeCelsius}$/30~bars inner channels. As an example, at 57~MHz, increasing the strap thickness by 15~mm decreased the coupling resistance by 25\% for the same plasma loading. The coupling resistance of the new antennas has been increased compared to the prototypes one in particular by reducing the distance between the strap and the Faraday screen bars from 52~mm to 34~mm and by supressing a vertical septum which was masking a portion of the straps in the prototype (Figure~\ref{fig:westfrontfaceevolution1}). 
-
-\begin{marginfigure}
+The frequency increase is a practical consequence of the changes of Tore Supra to become WEST\sidecite[+1cm]{bourdelle2015}: as the plasma volume was reduced and  shifted toward the high field side of the machine, locating the cyclotron resonance in the plasma centre requires higher RF frequencies (cf. Eq.(\ref{eq:cyclotron_resonance})). The desired frequency band of the ICRH system for WEST was thus asked to 48-60~MHz. RF plant has predefined frequencies centred around 48, 53, 55.5, 57 and 63~MHz $\pm$ 2~MHz.
+ 
+\begin{marginfigure}[+1.2cm]
 	\centering
 	\includegraphics[width=0.8\linewidth]{figures/chap3/WEST_ICRH/WEST_front_face_evolution2}
 	\caption{Evolution of 3D CAD models for coupling optimization.}
 	\label{fig:westfrontfaceevolution2}
 \end{marginfigure}
+
+From July 2013 to May 2014, the coupling of various models have been assessed using the COMSOL finite element software. Perfectly Match Layers (PMLs) boundary conditions adapted to plasma fast wave were used in 2D and 3D\sidecite[-1.5cm]{jacquot2013, colas2019}. Starting from the 2007 prototype geometry, the effects of geometrical modifications on coupling resistance have been assessed, from very simplified parametrized 2D (Figure~\ref{fig:westfrontfaceevolution1}) to almost final 3D geometries (Figure~\ref{fig:westfrontfaceevolution2}). These models used first experimental density profiles obtained in Tore Supra in 2007 (pulse \#40574) before using assumptions of WEST density profiles. In this pulse, an L-mode plasma has been moved horizontally over 5 cm in front of the load-resilient antenna prototype to assess its coupling properties at 48 MHz. The calculations have been performed for 8 profiles in order to make relative comparisons of the coupling resistance. 2D model run in few minutes while 3D models typically required ten to twenty hours depending on their complexity and the distance to the cut-off density on a desktop computer. 
+
+These parametrized models allowed us to assess the relevant geometrical parameters (strap thickness, width, and distances to the plasma cut-off and antenna box) affecting the coupling resistance. In order to optimize the coupling resistance in dipole configuration, the thickness of the strap has been kept as low as possible (between 13 and 15 mm) while ensuring sufficient stiffness, since they are water cooled through 70$\si{\degreeCelsius}$/30~bars inner channels. As an example, at 57~MHz, increasing the strap thickness by 15~mm decreased the coupling resistance by 25\% for the same plasma loading. The coupling resistance of the new antennas has been increased compared to the prototypes one in particular by reducing the distance between the strap and the Faraday screen bars from 52~mm to 34~mm and by supressing a vertical septum which was masking a portion of the straps in the prototype (Figure~\ref{fig:westfrontfaceevolution1}). 
+
+
 
 Each antenna is equipped with four internal COMET tunable vacuum capacitors, with capacitances ranging from 15~pF to 150~pF and specifically upgraded for CW operation. In order to operate the antenna at a higher frequency, 55~MHz compared with the 48~MHz of the prototype, with the same capacitance range, the straps electrical length has been reduced in order to decrease their reactance $X_s$. However, increasing the coupling resistance also decreases the strap reactance $X_s$ {\sidecite{pinsker1998, helou2018}. Hence, trade-off were unavoidable between coupling efficiency and impedance matching as the desired frequencies\footnote{Other trade-off have been made due to the following reasons. Bringing closer the strap and its feeder leads to reduce the coupling resistance (-23\% decrease of the coupling resistance for 50~mm distance reduction). Increasing the toroidal width of the straps led to reduce the strap reactance but also to decrease the coupling resistance (-50\% decrease of the coupling resistance for +40~mm width increase). It has been kept to 130~mm, the same value as for the prototype.}. 
 
@@ -168,10 +171,9 @@ Using the coupling resistance definition from ref. [6] and the maximum capacitor
 
 % ###################################################
 \subsubsection{Rear Parts}
-% TODO: \usepackage{graphicx} required
 \begin{marginfigure}
 	\centering
-	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/bridge_evolution}
+	\includegraphics[width=0.9\linewidth]{figures/chap3/WEST_ICRH/bridge_evolution}
 	\caption{Modification of the bridge section from 2007 prototype (top) to WEST (bottom). The input transmission line has been made in-axis}
 	\label{fig:bridgeevolution}
 \end{marginfigure}
@@ -185,29 +187,36 @@ In order to reduce the manufacturing cost as well to simplify the mechanical ass
 	\label{fig:bridgeevolution2}
 \end{marginfigure}
 
-Also in order to facilitate the mechanical assembly of the antenna, in particular the water pipes and diagnostic cables connection, it has been proposed to enlarge the distance between the rear part of the antenna box and the rear part of the bridge, ie. the dimensions $d_1$, $d_2$ and $d_3$ are illustrated in Figure~\ref{fig:bridgeevolution2}. The influence of each dimensions on RF performances have been assessed and it was proposed to keep the 2007 prototype ($d_1$=17.7~mm) value for the WEST antenna and not increasing it (keeping this value to the minimum possible from a mechanical point of view). The $d_2$ dimension could be increased by 20~mm from the 2007 prototype ($d_2$=30.8~mm) value for the WEST antenna ($d_2\to$50~mm). Increasing the length $d_3$ means increasing the strap electrical length. A +20~m ($d_3\to$30~mm.) increasing as been proposed, which impacts the matching capability of the antenna, especially for higher frequencies (50-60MHz). However, 
+Also in order to facilitate the mechanical assembly of the antenna, in particular the water pipes and diagnostic cables connection, it has been proposed to enlarge the distance between the rear part of the antenna box and the rear part of the bridge, ie. the dimensions $d_1$, $d_2$ and $d_3$ are illustrated in Figure~\ref{fig:bridgeevolution2}. The influence of each dimensions on RF performances have been assessed and it was proposed to keep the 2007 prototype ($d_1$=17.7~mm) value for the WEST antenna and not increasing it (keeping this value to the minimum possible from a mechanical point of view). The $d_2$ dimension could be increased by 20~mm from the 2007 prototype ($d_2$=30.8~mm) value for the WEST antenna ($d_2\to$50~mm). Increasing the length $d_3$ means increasing the strap electrical length. A +20~m ($d_3\to$30~mm.) increasing as been proposed, which impacts the matching capability of the antenna, especially for higher frequencies (50-60MHz). 
 
-For the same reason, the radial length of the bridge labelled $L_3$ in Figure~\ref{fig:bridgeevolution3} has been increase by 50~mm ($L_3\to $185.5~mm) for the WEST antenna. The $L_3$ length was found to has no impact on the VSWR of the antenna. Thus, the radial length of the bridge has been increased by50~mm ($L_3\to$185.5~mm) for the WEST antenna.
-
-\begin{marginfigure}
+\begin{marginfigure}[-3cm]
 	\centering
 	\includegraphics[width=0.8\linewidth]{figures/chap3/WEST_ICRH/bridge_evolution3}
 	\caption{Illustration of the bridge radial length $L_3$.}
 	\label{fig:bridgeevolution3}
 \end{marginfigure}
 
-A two-stage quarter-wavelength and water cooled impedance transformer is connected from the bridge to the vacuum feed-through. The impedance transformer dimensions have been optimized for a 3~$\si{\Omega}$ T-junction impedance and a 30~$\si{\Omega}$ feeder characteristic impedance at 50~MHz. The final diameters have been afterwards adjusted to match pipe diameter standards with a slight compromise with the RF performance. 
+For the same reason, the radial length of the bridge labelled $L_3$ in Figure~\ref{fig:bridgeevolution3} has been increase by 50~mm ($L_3\to $185.5~mm) for the WEST antenna. The $L_3$ length was found to has no impact on the VSWR of the antenna. Thus, the radial length of the bridge has been increased by50~mm ($L_3\to$185.5~mm) for the WEST antenna.
 
 
-\todo{Illustration Impedance transformer}
+
+A two-stage quarter-wavelength and water cooled impedance transformer is connected from the bridge to the vacuum feed-through (Figure~\ref{fig:westicrhimpedancetransformer}). The impedance transformer dimensions have been optimized for a 3~$\si{\Omega}$ T-junction impedance and a 30~$\si{\Omega}$ feeder characteristic impedance at 50~MHz. The final diameters have been afterwards adjusted to match pipe diameter standards with a slight compromise with the RF performance. 
+
+\begin{figure*}[h]
+	\centering
+	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/WEST_ICRH_impedance_transformer}
+	\caption{Sketch of the WEST ICRH antenna two-stage impedance transformer (simplified)}
+	\label{fig:westicrhimpedancetransformer}
+\end{figure*}
 
 
-\begin{figure}
+
+\begin{figure*}
 	\centering
 	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/WEST_ICRH_antenna_elements}
 	\caption{Elements of a WEST ICRH Antenna}
 	\label{fig:westicrhantennaelements}
-\end{figure}
+\end{figure*}
 
 \clearpage
 
@@ -295,18 +304,24 @@ capa = l.resistor(R)**l.inductor(L)**l.capacitor(C)
 capa_WEST = pre ** cap ** post  
 \end{lstlisting}
 
-Using the standard optimization toolbox shipped in the \href{https://www.scipy.org/}{\texttt{scipy}} package, the model parameters can be fitted for each full-wave network. Once done, full-wave references and lumped model can be compared. The Figure~\ref{fig:capacitor_interpolation} shows the calculated $S_{21}$ parameter which fit nice with the reference full-wave values. For most capacitance configurations, the error is below -40~dB. Taking constant lumped parameters ($R_s, L_s, C_1=C_2, R_1=R_2, L_1=L_2$) but $C$, the still matches well the full-wave reference except for the lowest range of capacitance values, in a region where the relationship between the electrodes distance and the capacitance is no more linear. The model can thus be used to determine a realistic relationship between the RF capacitance and the capacitor configuration (driven by motors).
+Using the standard optimization toolbox shipped in the \href{https://www.scipy.org/}{\texttt{scipy}} package, the model parameters can be fitted for each full-wave network. Once done, full-wave references and lumped model can be compared. The Figures~\ref{fig:capacitor_interpolation_S11} and \ref{fig:capacitor_interpolation_S21} shows the calculated $S_{11}$ and $S_{21}$ parameters which fit nice with the reference full-wave values. For most capacitance configurations, the error is below -40~dB. Taking constant lumped parameters ($R_s, L_s, C_1=C_2, R_1=R_2, L_1=L_2$) but $C$, the still matches well the full-wave reference except for the lowest range of capacitance values, in a region where the relationship between the electrodes distance and the capacitance is no more linear. The model can thus be used to determine a realistic relationship between the RF capacitance and the capacitor configuration (driven by motors).
 
 \begin{figure}
 	\centering
 	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/comparison_fullwave_lumped_S11}
-	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/comparison_fullwave_lumped_S21}
-	\caption{Real part of  $S_{11}$ (top) and $S_{21}$ (bottom) between the reference from full-wave  calculations (thin lines) and the lumped model (thick lines).}
-	\label{fig:capacitor_interpolation}
+	\caption{Real part of $S_{11}$ (bottom) between the reference from full-wave  calculations (thin lines) and the lumped model (thick lines).}
+	\label{fig:capacitor_interpolation_S11}
 \end{figure}
 
-% ###########################################
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/comparison_fullwave_lumped_S21}
+	\caption{Real part of $S_{21}$ between the reference from full-wave  calculations (thin lines) and the lumped model (thick lines).}
+	\label{fig:capacitor_interpolation_S21}
+\end{figure}
+
 \clearpage
+% ###########################################
 \subsubsection{Antenna RF Circuit}
 In \texttt{scikit-rf}, there is at least two ways of building a RF circuit made of various networks. The first method consists in connecting networks one by one using \texttt{Network} methods. A second method consists in defining all the connections between networks and ports at once time, then use the \texttt{Circuit} object to build the resultant network. While the later method can be more verbose than the former, it has some advantages when the circuit has many connections. \texttt{Circuit} uses a systematic solving method giving both internal (for each circuit connections) and external (for ports) S-parameters for an arbitrary number of networks and interconnections and independently of the circuit excitation \sidecite{hallbjorner2003}. By imposing excitations at ports, it allows obtaining voltages/currents inside the circuit.
 
@@ -375,7 +390,7 @@ Long pulse high power operation requires dedicated protections from the generato
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\linewidth]{figures/chap3/WEST_ICRH/WEST_ICRH_VSWR_vs_Rc}
+	\includegraphics[width=1.0\linewidth]{figures/chap3/WEST_ICRH/WEST_ICRH_VSWR_vs_Rc}
 	\caption{Voltage Standing Wave Ratio (VSWR) versus coupling resistance (Rc) for a WEST ICRH antennas (data from WEST pulse \#55589) and RF modelling (plain line). The behaviour of a non-resilient antenna is indicated for reference (dashed line).}
 	\label{fig:westicrhvswrvsrc}
 \end{figure}
@@ -400,33 +415,27 @@ Finally, the three WEST ICRH antenna have been commissioned and used on WEST pla
 \marginnote{Part of this section are taken from \citeauthyear{hillairet2015-1} \citeauthyear{hillairet2018}, the PhD of Zhaoxi \citeauthyear{chen2018-2} and its associated papers \cite{chen2017-2, chen2017-3,  chen2018, chen2018-1, chen2020}.}
 % #####################################################
 \subsection{Context}
-
-\begin{marginfigure}
-	\centering
-	\includegraphics[width=1.0\linewidth]{figures/chap3/RF_contacts/RF_contact_purpose}
-	\caption{Illustration of RF sliding contacts for coaxial line application. This schematics shows a possible mechanical solution for allowing radial sliding between two high power coaxial lines using a set of sliding contact located on the inner conductor. A similar setup is found for the outer conductor.}
-	\label{fig:rfcontactpurpose}
-\end{marginfigure}
-
 RF contacts are used to ease the assembling and/or sliding movements of the structures and to lower the thermo-mechanical stress, while insuring the continuity of the RF current (Figure~\ref{fig:rfcontactpurpose}). Depending on the purpose, these sliding contacts can be located into a pressurized or a vacuum environment. Although RF contacts are commonly used in the electronic industry as well as on scientific research facilities, however, their application on high RF current load under vacuum is very limited. 
 
-
-\begin{marginfigure}
+\begin{figure}[h]
 	\centering
-	\includegraphics[width=1.0\linewidth]{figures/chap3/RF_contacts/RF_contact_RFcurrent}
-	\caption{Illustration of the path of the RF current through the RF contact at the interfaces.}
-	\label{fig:rfcontactrfcurrent}
-\end{marginfigure}
+	\includegraphics[width=0.45\linewidth]{figures/chap3/RF_contacts/RF_contact_purpose}
+	\includegraphics[width=0.45\linewidth]{figures/chap3/RF_contacts/RF_contact_RFcurrent}
+	\caption{Left: Illustration of RF sliding contacts for coaxial line application. This schematics shows a possible mechanical solution for allowing radial sliding between two high power coaxial lines using a set of sliding contact located on the inner conductor. A similar setup is found for the outer conductor. Right: Illustration of the path of the RF current through the RF contact at the interfaces.}
+	\label{fig:rfcontactpurpose}
+\end{figure}
+
+%\begin{marginfigure}
+%	\centering
+%
+%	\caption{}
+%	\label{fig:rfcontactrfcurrent}
+%\end{marginfigure}
 
 
-Specific RF contacts have been developed specifically for particle accelerators \sidecite{calatroni2001} or in nuclear fusion research at RF frequencies  \sidecite{agarici1997, ladurelle1997}. During the last 15 years, such contacts have been tested in various operating conditions. CEA or IPP internal or EFDA-funded studies have been made for antenna R\&D like for the JET-EP antenna or for W7-X \sidecite{birus2005}, as well as in RF accelerators \sidecite{waites1998, calatroni2001}. Standard commercial products Multi-Contact LA-CUT are for instance used inside the JET "ITER-like" antenna between the capacitors and the straps \sidecite{goulding2003}. The experiments results obtained at CEA under vacuum with these commercial contacts are summarized in Figure~\ref{fig:rfcontactsummaryexperiments}.
+Specific RF contacts have been developed specifically for particle accelerators \sidecite[-0.5cm]{calatroni2001} or in nuclear fusion research at RF frequencies  \sidecite{agarici1997, ladurelle1997}. During the last 15 years, such contacts have been tested in various operating conditions. CEA or IPP internal or EFDA-funded studies have been made for antenna R\&D like for the JET-EP antenna or for W7-X \sidecite{birus2005}, as well as in RF accelerators \sidecite{waites1998, calatroni2001}. Standard commercial products Multi-Contact LA-CUT are for instance used inside the JET "ITER-like" antenna between the capacitors and the straps \sidecite{goulding2003}. The experiments results obtained at CEA under vacuum with these commercial contacts are summarized in Figure~\ref{fig:rfcontactsummaryexperiments}.
 
-\begin{marginfigure}
-	\centering
-	\includegraphics[width=0.9\linewidth]{figures/chap3/RF_contacts/RF_contact_LACUT}
-	\caption{Illustration of commercial \href{https://ec.staubli.com/products/productline/7}{Multi-Contact (now Staübli)} MULTILAM  LA-CUT spring contacts. }
-	\label{fig:rfcontactlacut}
-\end{marginfigure}
+
 
 \begin{figure}[h]
 	\centering
@@ -436,9 +445,14 @@ Specific RF contacts have been developed specifically for particle accelerators 
 \end{figure}
 
 The ITER Ion Cyclotron Resonance Heating and Current Drive (ICRH\&CD) system is designed to couple to the plasma 20~MW (10~MW each from two antennas) of RF power in the 40-55~MHz frequency range in continuous wave operation (3600~s) \sidecite{beaumont2013, lamalle2013, durodie2014}. The RF power, generated by nine 3~MW sources (four per antenna and one spare), is carried though pressurized coaxial lines to 8 feeds per antenna. The ITER ICRH antenna design relies on electrical sliding contacts located in a few locations of the antenna on both inner and outer conductors\footnote{The design of the ITER ICRH antenna has been completely updated from 2019, in order to simplify its mechanical structure. In this new design, the number (and location) of the RF-contact have reduced.} \sidecite{argouarch2014, hillairet2015-1}. These contacts ensure the current continuity and allow the antenna assembly by lowering thermo-mechanical stresses of the Removable Vacuum Transmission Line (RVTL) coaxial conductors during the RF operations. They are required to be used in steady-state conditions and under the machine high vacuum ($ 10^{-3}$ - $10^{-7}$~\si{Pa}). The temperature environment of the contacts depends on the machine regime: during RF operations, the antenna in which the contacts are located is cooled by a 70–90$\si{\degreeCelsius}$ water network while during baking operations (no RF) the temperature rises to 250$\si{\degreeCelsius}$. These RF contacts have to withstand maximum peak current of 2.5~kA in steady-state at 40-55~MHz, on various diameters. In terms of current densities, defined as the ratio between the current and the circumference of the contact strip, this represents between 3.1~kA/m and 4.8~kA/m depending on their location in the antenna. The highest current density corresponds to the inner conductor connection between the 4-ports junction and the RVTL for a 2~kA peak current on a 132~mm diameter at 55~MHz. The thermal expansion during RF operation on a RVTL is estimated to 2~mm, at low speed (~0.05~mm/s). During assembly or intervention, the total stroke is about 50 mm at the remote handling system speed (few \si{mm/s}) and under atmosphere. Since no routine maintenances are scheduled on the antenna, these contacts must operate during its whole lifetime, required to be at least 20 years. Thus, the reliability of the ICRH antenna is directly linked to these contacts, which have to withstand 30~000 cycles over this period. For this reason, the contact design and materials require extensive characterizations.
+\begin{marginfigure}[-9cm]
+	\centering
+	\includegraphics[width=0.9\linewidth]{figures/chap3/RF_contacts/RF_contact_LACUT}
+	\caption{Illustration of commercial \href{https://ec.staubli.com/products/productline/7}{Multi-Contact (now Staübli)} MULTILAM  LA-CUT spring contacts. }
+	\label{fig:rfcontactlacut}
+\end{marginfigure}
 
-
-\begin{marginfigure}
+\begin{marginfigure}[-2cm]
 	\centering
 	\includegraphics[width=0.4\linewidth]{figures/chap3/RF_contacts/RF_contact_CCFE_before.png}
 	\caption{RF Contact prototype tested in 2014.}
@@ -454,7 +468,7 @@ In a previous test campaign, a design proposed by the CYCLE consortium using bra
 	\label{fig:rfcontactccfe}
 \end{figure}
 
-
+\clearpage
 % #####################################################
 \subsection{The CEA/IRFM T-resonator}
 
