--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -139,7 +139,7 @@ Finally, the multipactor threshold scales almost linearly with the frequency \si
 % ###########################################################
 % ###########################################################
 % ###########################################################
-\subsection[Influence of electron emission]{Influence of the secondary emission on multipactor calculations}\label{sec:multipactor_TEEY}
+\subsection[Influence of Electron Emission]{Influence of the secondary emission on multipactor calculations}\label{sec:multipactor_TEEY}
 The previous results obtained from multipactor modelling codes always had to assume a specific metal secondary emission properties. When an incident electron (IE) impacts the components' walls, it can penetrate the material and then transfer a part of its energy through inelastic interactions. The IE can excite the inner material electron which could escape the material surface, which is called \textit{secondary electron} (SE). The IE can also escape the surface material due to several inelastic and elastic interactions: in this case the electron emitted is called the \textit{back-scattered electrons} (BSE). We commonly define three yields: 
 \begin{itemize}
 	\item the Total Electron Emission Yield (TEEY, $\sigma$) which is the number of the whole electrons emitted by the surface divided by the number of IE,
